Fully remove Eclipse language server